cppcheck/raw_cppcheck/207755_report.txt
openssl.c:12:28: error: There is an unknown macro here somewhere. Configuration is required. If ZEND_NUM_ARGS is a macro then please configure it. [unknownMacro]
 if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "sss|bs", &data, &data_len, &method, &method_len, &password, &password_len, &raw_output, &iv, &iv_len) == FAILURE) {
                           ^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

